[gd_scene load_steps=2 format=3 uid="uid://dll8lv48stphp"]

[ext_resource type="Script" path="res://menus/config/config.gd" id="1_s0o8k"]

[node name="Config" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s0o8k")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 768.0
offset_bottom = 512.0
color = Color(0.52751, 0.347793, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -253.0
offset_right = 253.0
offset_bottom = 263.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "MENU_CONFIG_TITLE

"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="lable" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "MENU_CONFIG_MOUSE
"
horizontal_alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = ": ???"

[node name="HSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
max_value = 25.0
value = 12.0

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="lable2" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "MENU_CONFIG_JOYSTICK
"
horizontal_alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = ": ???
"

[node name="HSlider2" type="HSlider" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
max_value = 25.0
value = 12.0

[node name="HBoxContainer4" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="lable2" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "MENU_CONFIG_VOLUME
"
horizontal_alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = ": ???
"

[node name="HSlider3" type="HSlider" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
value = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="lable3" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "MENU_CONFIG_FULL_SCREEN
"
horizontal_alignment = 1

[node name="CheckBox" type="CheckBox" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "MENU_CONFIG_LANGUAGE"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "english"
popup/item_0/id = 1
popup/item_1/text = "portugues brasileiro"
popup/item_1/id = 0

[node name="exit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "MENU_CONFIG_EXIT
"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HSlider2" to="." method="_on_h_slider_2_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HSlider3" to="." method="_on_h_slider_3_value_changed"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/HBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="item_selected" from="CenterContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/exit" to="." method="_on_button_pressed"]
